<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/new_background">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableBottom="@drawable/solid_line"
        android:gravity="center"
        android:text="@string/add_new_seller"
        android:textColor="@android:color/white"
        android:layout_margin="25dp"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seller_first_name"
        android:layout_margin="25dp"
        android:textSize="20sp" />
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_margin="25dp"
        android:id="@+id/seller_first_name"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seller_last_name"
        android:layout_margin="25dp"
        android:textSize="20sp" />
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_margin="25dp"
        android:id="@+id/seller_last_name" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seller_address"
        android:layout_margin="25dp"
        android:textSize="20sp" />
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_margin="25dp"
        android:id="@+id/seller_address" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seller_phone"
        android:layout_margin="25dp"
        android:textSize="20sp" />
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_margin="25dp"
        android:id="@+id/seller_phone"/>
    
    <Button
        android:id="@+id/submit_seller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:background="@drawable/custom_submit_button"
        android:gravity="center"
        android:text="@string/button_for_submit" />

</LinearLayout>