<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/new_background" >
    
    <!-- Text Field LinearLayout -->
    <LinearLayout 
        android:layout_width="match_parent"
   		android:layout_height="wrap_content"
    	android:gravity="center"
    	android:orientation="vertical" >
        
        <TextView 
	        android:layout_height="wrap_content"
			android:layout_width="wrap_content" 
			android:text="@string/welcome_text" />

	   <EditText
	        android:id="@+id/userNameText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ellipsize="start"
	        android:gravity="center"
	        android:ems="10"
	        android:inputType="text"
	        android:hint="@string/user_name_hint" >
	    </EditText>
	
	  	<EditText
	       android:id="@+id/passwordText"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:ellipsize="start"
	       android:gravity="center"
	       android:ems="10"
	       android:inputType="textPassword"
	       android:hint="@string/password_hint" >
		</EditText>
        
    </LinearLayout>
    
  	<!-- Button LinearLayout -->
  	<LinearLayout 
  	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:gravity="center"
    	android:orientation="horizontal" >
  	    
  	    <Button
  	        android:id="@+id/clear_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="@drawable/custom_clear_button"
		    android:text="@string/clear_button_text" />
  	    
  	    <Button
  	        android:id="@+id/logon_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="@drawable/custom_log_on_button"
		    android:text="@string/logon_button_text" />
  	    
  	</LinearLayout>

</LinearLayout>
