<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/new_background" >
    
    <Button
	                android:id="@+id/qr_button"
	                style="?android:attr/buttonStyleSmall"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/button_for_QR" 
	                android:layout_gravity="center"/>

	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/set_id_no_text"
	                android:layout_gravity="center" />

	            <EditText
	                android:id="@+id/item_number"
	                android:layout_width="214dp"
	                android:layout_height="wrap_content"
	                android:height="25dp"
	                android:width="25dp"
	                android:layout_gravity="center" >

	                <requestFocus />
	                
</EditText>

	            <Button
	    android:id="@+id/submit"
	    android:layout_width="195dp"
	    android:layout_height="wrap_content"
	    android:background="@drawable/custom_submit_button"
	    android:layout_gravity="center"
	    android:text="@string/button_for_submit" />
</LinearLayout>
